--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>
-            test
-        </title>
+        <title>test</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div title="sort-div">
