--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
                 <a href="./exercices/G01_Labyrinth.7z" download>
                     <pre>G01 - Labyrinth</pre>
                 </a>
-                <a href="./exercices/G02_Reversi.7z" download="G02 - Reversi">
+                <a href="./exercices/G02_Reversi.7z" download>
                     <pre>G02 - Reversi</pre></a>
             </div>
         </div>            
